Adding rate feature
