# cmd/api/server/route.go
@@ -16,4 +16,5 @@ func (a *Api) setupRoutes() {
 	a.router.HandleFunc("POST /api/v1/contents/write-down", a.AuthTokenMiddleware(a.handleWriteDown))
 	a.router.HandleFunc("GET /api/v1/contents/feed", a.AuthTokenMiddleware(a.handleFeed))
 	a.router.HandleFunc("PUT /api/v1/contents/{id}", a.AuthTokenMiddleware(a.handleContentEdit))
+	a.router.HandleFunc("POST /api/v1/contents/{id}/rate", a.AuthTokenMiddleware(a.handleRateContent))
 }
